--- a/index.html
+++ b/index.html
@@ -1,10 +1,65 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>contact</title>
-</head>
-	<p>HELLO</p>
-<body>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>CONTACT | Mr.Zhang</title>
+		<link rel="stylesheet" type="text/css" href="header.css">
+		<link rel="stylesheet" type="text/css" href="box.css">
+		<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+		<script src="jQuery.js"></script>
+	</head>
+	<body bgcolor="black">
+		<div class="header">
+			<ul class="bar">
+				<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
+					<a class="nav-home" href = "http://david-zhang-test.github.io">
+						<font size="4">
+							<p1 style="color:white;text-align:center">HOME</p1>
+						</font>
+					</a>
+				</li>
+				<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
+					<a class="nav-home" href="http://david-zhang-test.github.io/about-me">
+						<font size="4">
+							<p1 style="color:white;text-align:center;width=100px">ABOUT</p1>
+						</font>
+					</a>
+				</li>
+				<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
+					<a class="nav-home" href="http://david-zhang-test.github.io/music-center" >
+						<font size="4">
+							<p1 style="color:white;text-align:center;width=100px">MUSIC</p1>
+						</font>
+					</a>
+				</li>
+
+				<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
+					<a class="nav-home" href="" >
+						<font size="4">
+							<p1 style="color:white;text-align:center;width=100px">PHOTO</p1>
+						</font>
+					</a>
+				</li>
+				<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
+					<a class="nav-home" href=""  >
+						<font size="4">
+							<p1 style="color:white;text-align:center;width=100px">CODES</p1>
+						</font>
+					</a>
+				</li>
+				<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
+					<a class="nav-home" href="http://david-zhang-test.github.io/contact">
+						<font size="4">
+							<p1 style="color:white;text-align:center;width=100px">CONTACT</p1>
+						</font>
+					</a>
+				</li>
+			</ul>
+		</div>
+		<div id="box">
+			<div class="paragraphone">
+				<p1 id="pp1" style="color:white;font-size:150px;text-align:center;display:none;">CONTACT</p1>
+			</div>
+		</div>
+	</body>
 </html>
