--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="box.css">
 		<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 		<script src="jQuery.js"></script>
+		<script src="box.js"></script>
 	</head>
 	<body bgcolor="black">
 		<div class="header">
@@ -60,6 +61,19 @@
 			<div class="paragraphone">
 				<p1 id="pp1" style="color:white;font-size:150px;text-align:center;display:none;">CONTACT</p1>
 			</div>
+			<div class="paragraphtwo">
+				<p1 id="pp2" style="color:white;font-size:150px;text-align:center;font-family:'Gabriola';">Let's Talk!</p1>
+			</div>
+			<div class="paragraphthree">
+				<p1 id="pp3" style="color:white;font-size:30px;text-align:center;font-family:'Gabriola';letter-spacing:4px">You can ask me questions or give me some advices, or even what ever you like. I will answer your questions regularly.</p1>
+			</div>
+			<div class="discuss_part">
+				<div id="lv-container" data-id="city" data-uid="MTAyMC80OTMyOC8yNTgyMA==">	
+				</div>
+			</div>
 		</div>
+		
+
+		
 	</body>
 </html>
