--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<script src="jQuery.js"></script>
 		<script src="box.js"></script>
 	</head>
-	<body bgcolor="black">
+	<body background="背景.png">
 		<div class="header">
 			<ul class="bar">
 				<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
@@ -65,12 +65,16 @@
 				<p1 id="pp2" style="color:white;font-size:150px;text-align:center;font-family:'Gabriola';">Let's Talk!</p1>
 			</div>
 			<div class="paragraphthree">
-				<p1 id="pp3" style="color:white;font-size:30px;text-align:center;font-family:'Gabriola';letter-spacing:4px">You can ask me questions or give me some advices, or even what ever you like. I will answer your questions regularly.</p1>
+				<p1 id="pp3" style="color:white;font-size:30px;text-align:center;font-family:'Gabriola';letter-spacing:4px">You can ask me questions or give me some advices what ever you like. I will answer your it regularly. Thank you.</p1>
 			</div>
 			<div class="discuss_part">
 				<div id="lv-container" data-id="city" data-uid="MTAyMC80OTMyOC8yNTgyMA==">	
 				</div>
 			</div>
+		</div>
+		<div class="footer" style="background-color:'black';width100%;height:20px;margin-bottom:0px;">
+			<p style="width:340px;color:white;margin:0 auto;">© 2020 Mr.Zhang DESIGN & ILLUSTRATION</p>
+			
 		</div>
 		
 
