--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<p1 id="pp2" style="color:white;font-size:150px;text-align:center;font-family:'Gabriola';">Let's Talk!</p1>
 			</div>
 			<div class="paragraphthree">
-				<p1 id="pp3" style="color:white;font-size:30px;text-align:center;font-family:'Gabriola';letter-spacing:4px">You can ask me questions or give me some advices what ever you like. I will answer your it regularly. Thank you.</p1>
+				<p1 id="pp3" style="color:white;font-size:30px;text-align:center;font-family:'Gabriola';letter-spacing:4px">You can ask me questions or give me some advices what ever you like. I will answer it regularly. Thank you.</p1>
 			</div>
 			<div class="discuss_part">
 				<div id="lv-container" data-id="city" data-uid="MTAyMC80OTMyOC8yNTgyMA==">	
