--- a/index.html
+++ b/index.html
@@ -10,53 +10,56 @@
 		<script src="box.js"></script>
 	</head>
 	<body background="背景.png">
-		<div class="header">
-			<ul class="bar">
-				<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
-					<a class="nav-home" href = "http://david-zhang-test.github.io">
-						<font size="4">
-							<p1 style="color:white;text-align:center">HOME</p1>
-						</font>
-					</a>
-				</li>
-				<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
-					<a class="nav-home" href="http://david-zhang-test.github.io/about-me">
-						<font size="4">
-							<p1 style="color:white;text-align:center;width=100px">ABOUT</p1>
-						</font>
-					</a>
-				</li>
-				<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
-					<a class="nav-home" href="http://david-zhang-test.github.io/music-center" >
-						<font size="4">
-							<p1 style="color:white;text-align:center;width=100px">MUSIC</p1>
-						</font>
-					</a>
-				</li>
+		<div class="header-bar">
+			<div class="header">
+				<ul class="bar">
+					<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
+						<a class="nav-home" href = "http://david-zhang-test.github.io">
+							<font size="4">
+								<p1 style="color:white;text-align:center">HOME</p1>
+							</font>
+						</a>
+					</li>
+					<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
+						<a class="nav-home" href="http://david-zhang-test.github.io/about-me">
+							<font size="4">
+								<p1 style="color:white;text-align:center;width=100px">ABOUT</p1>
+							</font>
+						</a>
+					</li>
+					<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
+						<a class="nav-home" href="http://david-zhang-test.github.io/music-center" >
+							<font size="4">
+								<p1 style="color:white;text-align:center;width=100px">MUSIC</p1>
+							</font>
+						</a>
+					</li>
 
-				<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
-					<a class="nav-home" href="" >
-						<font size="4">
-							<p1 style="color:white;text-align:center;width=100px">PHOTO</p1>
-						</font>
-					</a>
-				</li>
-				<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
-					<a class="nav-home" href=""  >
-						<font size="4">
-							<p1 style="color:white;text-align:center;width=100px">CODES</p1>
-						</font>
-					</a>
-				</li>
-				<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
-					<a class="nav-home" href="http://david-zhang-test.github.io/contact">
-						<font size="4">
-							<p1 style="color:white;text-align:center;width=100px">CONTACT</p1>
-						</font>
-					</a>
-				</li>
-			</ul>
+					<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
+						<a class="nav-home" href="" >
+							<font size="4">
+								<p1 style="color:white;text-align:center;width=100px">PHOTO</p1>
+							</font>
+						</a>
+					</li>
+					<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
+						<a class="nav-home" href=""  >
+							<font size="4">
+								<p1 style="color:white;text-align:center;width=100px">CODES</p1>
+							</font>
+						</a>
+					</li>
+					<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
+						<a class="nav-home" href="http://david-zhang-test.github.io/contact">
+							<font size="4">
+								<p1 style="color:white;text-align:center;width=100px">CONTACT</p1>
+							</font>
+						</a>
+					</li>
+				</ul>
+			</div>
 		</div>
+
 		<div id="box">
 			<div class="paragraphone">
 				<p1 id="pp1" style="color:white;font-size:150px;text-align:center;display:none;">CONTACT</p1>
