--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			</div>
 		</div>
 		<div class="footer" style="background-color:'black';width100%;height:20px;margin-bottom:0px;">
-			<p style="width:340px;color:white;margin:0 auto;">© 2020 Mr.Zhang All Right Reserved</p>
+			<p style="width:340px;color:white;margin:0 auto;">© 2020 Mr.Zhang All Rights Reserved</p>
 			
 		</div>
 		
