--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<script src="jQuery.js"></script>
 		<script src="box.js"></script>
 	</head>
-	<body background="背景.png">
+	<body>
 		<div class="header-bar">
 			<div class="header">
 				<ul class="bar">
