--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
 						<a class="nav-home" href=""  >
 							<font size="4">
-								<p1 style="color:white;text-align:center;width=100px">CODES</p1>
+								<p1 style="color:white;text-align:center;width=100px">BLOG</p1>
 							</font>
 						</a>
 					</li>
