--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						</a>
 					</li>
 					<li onmouseover="this.className='selcet'" onMouseOut="this.className='selceted'">
-						<a class="nav-home" href=""  >
+						<a class="nav-home" href="http://david-zhang-test.github.io/blog"  >
 							<font size="4">
 								<p1 style="color:white;text-align:center;width=100px">BLOG</p1>
 							</font>
